packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/duplicate-event-type-property-relations.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if duplicate event type property relation definitions are rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:10:cs"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="true" multivalued="true" merge="match"/>
          <property name="b" object-type="a" description="b" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
        <relations>
          <other property1="a" property2="b" directed="false" description="[[a]] related to [[b]]" confidence="1" predicate="related"/>
          <other property1="a" property2="b" directed="false" description="[[a]] related to [[b]]" confidence="1" predicate="related"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
